--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="col-9 col-lg-3">
                         <div class="site-branding">
-                            <h1 class="site-title"><a href="#" rel="home">Master<span>class</span></a></h1>
+                            <h1 class="site-title"><a href="#" rel="home">inSiti<span>Masterclass</span></a></h1>
                         </div><!-- .site-branding -->
                     </div><!-- .col -->
 
@@ -151,23 +151,8 @@
 
                     <div class="course-content-wrap">
                         <header class="entry-header">
-                            <div class="course-ratings d-flex align-items-center">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star-o"></span>
-                                <span class="course-ratings-count">(4 votes)</span>
-                            </div><!-- .course-ratings -->
-
                             <h2 class="entry-title"><a href="#">Choisir sa franchise / Etablir le contact avec les franchiseurs</a></h2>
                         </header><!-- .entry-header -->
-
-                        <footer class="entry-footer d-flex justify-content-between align-items-center">
-                            <div class="course-cost">
-                                <span class="free-cost">Free</span>
-                            </div><!-- .course-cost -->
-                        </footer><!-- .entry-footer -->
                     </div><!-- .course-content-wrap -->
                 </div><!-- .course-content -->
             </div><!-- .col -->
@@ -182,24 +167,8 @@
 
                     <div class="course-content-wrap">
                         <header class="entry-header">
-                            <div class="course-ratings d-flex align-items-center">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star-o"></span>
-
-                                <span class="course-ratings-count">(4 votes)</span>
-                            </div><!-- .course-ratings -->
-
                             <h2 class="entry-title"><a href="#">Commencer l’étude de marché</a></h2>
                         </header><!-- .entry-header -->
-
-                        <footer class="entry-footer d-flex justify-content-between align-items-center">
-                            <div class="course-cost">
-                                $32 <span class="price-drop">$59</span>
-                            </div><!-- .course-cost -->
-                        </footer><!-- .entry-footer -->
                     </div><!-- .course-content-wrap -->
                 </div><!-- .course-content -->
             </div><!-- .col -->
@@ -208,30 +177,14 @@
                 <div class="course-content d-flex flex-wrap h-80 justify-content-between align-content-lg-stretch">
                     <figure class="course-thumbnail">
                         <a href="#">
-                            <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/fc2.jpg'), :alt => "Image" %>
+                            <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/fc3.jpg'), :alt => "Image" %>
                         </a>
                     </figure><!-- .course-thumbnail -->
 
                     <div class="course-content-wrap">
                         <header class="entry-header">
-                            <div class="course-ratings d-flex align-items-center">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star-o"></span>
-
-                                <span class="course-ratings-count">(4 votes)</span>
-                            </div><!-- .course-ratings -->
-
                             <h2 class="entry-title"><a href="#">Monter son dossier bancaire</a></h2>
                         </header><!-- .entry-header -->
-
-                        <footer class="entry-footer d-flex justify-content-between align-items-center">
-                            <div class="course-cost">
-                                $32 <span class="price-drop">$59</span>
-                            </div><!-- .course-cost -->
-                        </footer><!-- .entry-footer -->
                     </div><!-- .course-content-wrap -->
                 </div><!-- .course-content -->
             </div><!-- .col -->
@@ -240,29 +193,14 @@
                 <div class="course-content d-flex h-80 flex-wrap justify-content-between align-content-lg-stretch">
                     <figure class="course-thumbnail">
                         <a href="#">
-                            <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/fc1.jpg'), :alt => "Image" %>
+                            <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/fc4.jpg'), :alt => "Image" %>
                         </a>
                     </figure><!-- .course-thumbnail -->
 
                     <div class="course-content-wrap">
                         <header class="entry-header">
-                            <div class="course-ratings d-flex align-items-center">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star-o"></span>
-                                <span class="course-ratings-count">(4 votes)</span>
-                            </div><!-- .course-ratings -->
-
                             <h2 class="entry-title"><a href="#">Cibler les locaux potentiels</a></h2>
                         </header><!-- .entry-header -->
-
-                        <footer class="entry-footer d-flex justify-content-between align-items-center">
-                            <div class="course-cost">
-                                <span class="free-cost">Free</span>
-                            </div><!-- .course-cost -->
-                        </footer><!-- .entry-footer -->
                     </div><!-- .course-content-wrap -->
                 </div><!-- .course-content -->
             </div><!-- .col -->
@@ -313,7 +251,7 @@
 
             <div class="col-12 col-lg-6 d-flex align-content-center mt-5 mt-lg-0">
                 <div class="masterclass-image position-relative">
-                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/vs1.png'), :alt => "Image" %>
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/vs1.jpeg'), :alt => "Image" %>
                 </div><!-- .ezuca-video -->
             </div><!-- .col -->
         </div><!-- .row -->
@@ -328,27 +266,26 @@
         <div class="row mt-4">
             <div class="col-md-6 event-item">
                 <div class="event-thumb">
-                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/es1.jpg'), :alt => "Image" %>
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/es3.jpg'), :alt => "Image" %>
                     <div class="event-date">
-                        <span>24 Mar 2018</span>
+                        <span>A boulogne</span>
                     </div>
                 </div>
                 <div class="event-info">
-                    <h4>A boulogne</h4>
-                    <p>Retrouvez nos masterclass du week-end dans nos bureaux de Boulogne Billancourt, 
+                    <p>
+                        Retrouvez nos masterclass du week-end dans nos bureaux de Boulogne Billancourt, 
                         ouvertes à tous les porteurs de projet
                     </p>
                 </div>
             </div>
             <div class="col-md-6 event-item">
                 <div class="event-thumb">
-                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/es2.jpg'), :alt => "Image" %>
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/es4.jpg'), :alt => "Image" %>
                     <div class="event-date">
-                        <span>22 Mar 2018</span>
+                        <span>Sur le terrain</span>
                     </div>
                 </div>
                 <div class="event-info">
-                    <h4>Sur le terrain</h4>
                     <p>
                         Retrouvez nos masterclass itinérantes dans les villes, 
                         avec les candidats locaux pour structurer et accélérer les projets d’implantations commerciales
@@ -362,28 +299,102 @@
 <section class="clients-logo">
     <div class="container">
         <div class="row">
-            <div class="col-12 flex d-flex-wrap justify-content-center justify-content-lg-between align-items-center">
-                <div class="logo-wrap">
-                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/bp.png'), :alt => "Image" %>
+            <div class="col-12 d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center">
+                <div class="logo-wrap logo-wrap-custom">
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/bp.png'), :alt => "Image", :class=> "h-50 w-50" %>
                 </div><!-- .logo-wrap -->
 
-                <div class="logo-wrap">
-                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/bnp.png'), :alt => "Image" %>
+                <div class="logo-wrap logo-wrap-custom">
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/bnp.png'), :alt => "Image", :class=> "h-100 w-100"  %>
                 </div><!-- .logo-wrap -->
 
-                <div class="logo-wrap">
-                    <img src="images/logo-3.png" alt="">
+                <div class="logo-wrap logo-wrap-custom">
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/sg.png'), :alt => "Image", :class=> "h-100 w-100"  %>
                 </div><!-- .logo-wrap -->
 
-                <div class="logo-wrap">
-                    <img src="images/logo-4.png" alt="">
+                <div class="logo-wrap logo-wrap-custom">
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/cci.png'), :alt => "Image", :class=> "h-100 w-100" %>
                 </div><!-- .logo-wrap -->
 
-                <div class="logo-wrap">
-                    <img src="images/logo-5.png" alt="">
+                <div class="logo-wrap logo-wrap-custom">
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/ca.png'), :alt => "Image", :class=> "h-100 w-100" %>
                 </div><!-- .logo-wrap -->
             </div><!-- .col -->
         </div><!-- .row -->
     </div><!-- .container -->
 </section>
+
+<footer>
+    <div class="footer-widgets">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="foot-about">
+                        <a href="#">
+                            <h2 class="site-title">
+                                <a href="#" rel="home" class="foot-title">inSiti <span>Masterclass</span></a>
+                            </h2>
+                        </a>
+
+                        <p class="text-justify">
+                            Venez participer à l’une de nos journées de formation pour affiner votre projet de création de commerce, 
+                            en franchise ou en indépendant, et trouver les bons interlocuteurs. 
+                        </p>
+                    </div><!-- .foot-about -->
+                </div><!-- .col -->
+
+                <div class="col-12 col-md-6 col-lg-3 mt-5 mt-md-0">
+                    <div class="foot-contact">
+                        <h2>Contact Us</h2>
+
+                        <ul>
+                            <li>Email: info@inSiti.com</li>
+                            <li>Phone: (+33) 1 77 19 32 10</li>
+                            <li>Address: Billancourt, France</li>
+                        </ul>
+                    </div><!-- .foot-contact -->
+                </div><!-- .col -->
+
+                <div class="col-12 col-md-6 col-lg-3 mt-5 mt-lg-0">
+                    <div class="quick-links d-flex flex-wrap">
+                        <h2 class="w-100">Quick Links</h2>
+
+                        <ul class="w-50">
+                            <li><a href="#">About </a></li>
+                            <li><a href="#">Terms of Use </a></li>
+                            <li><a href="#">Privacy Policy </a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div><!-- .quick-links -->
+                </div><!-- .col -->
+
+                <div class="col-12 col-md-6 col-lg-3 mt-5 mt-lg-0">
+                    <div class="follow-us">
+                        <h2>Follow Us</h2>
+
+                        <ul class="follow-us d-flex flex-wrap align-items-center">
+                            <li><a href="https://www.facebook.com/inSitiNews/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>   
+                            <li><a href="https://www.facebook.com/inSitiNews/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://twitter.com/insitinews" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        </ul>
+                    </div><!-- .quick-links -->
+                </div><!-- .col -->
+            </div><!-- .row -->
+        </div><!-- .container -->
+    </div><!-- .footer-widgets -->
+
+    <div class="footer-bar">
+        <div class="container">
+            <div class="row flex-wrap justify-content-center justify-content-lg-between align-items-center">
+                <div class="col-12">
+                    <p class="footer-copyright">
+                        Copyright © <a href="https://insiti.com/" target="_blank">inSiti </a> | 
+                        <script>document.write(new Date().getFullYear());</script> All rights reserved 
+                    </p>
+                </div>
+            </div><!-- .row -->
+        </div><!-- .container -->
+    </div><!-- .footer-bar -->
+</footer>
 
