--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Master Class</title>
+    <title>inSiti Masterclass</title>
     <%= csrf_meta_tags %>
     <%#= csp_meta_tag %>
 
@@ -17,12 +17,5 @@
 
   <body>
     <%= yield %>
-
-
-    <script>
-      $('#myModal').on('shown.bs.modal', function () {
-        $('#myInput').trigger('focus')
-      })
-    </script>
   </body>
 </html>
